--- a/index.html
+++ b/index.html
@@ -63,37 +63,43 @@
         <h1>Projects</h1>
 
         <div class="workGrid">
-            <div class="project">
-                <div class="projectimg">
-                    <img src="images/logo_purple.png" alt="Circle Logo">
-                </div>
-                <div class="description">
-                    <h4>Project 1</h4>
-                    <p>This will be a short summary of project 1</p>
-                    <button>View Project</button>
-                </div>
+            <div class="projectimg project1">
+                <img src="images/logo_purple.png" alt="Circle Logo">
+            </div>
+            <div class="description1">
+                <h4>Project 1</h4>
+                <p>This will be a short summary of project 1
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut bibendum dui, nec iaculis lorem.
+                    Aliquam ac nisl lorem. Cras euismod imperdiet pellentesque. Phasellus tortor ex, vulputate in nisl
+                    at, porttitor ornare leo. Vestibulum pulvinar nunc vel elit facilisis blandit. Maecenas nisl ex,
+                    cursus id eros eget, finibus porta nunc. Sed pharetra vestibulum lacus, nec malesuada libero.
+                    Maecenas vel nibh tellus.
+                </p>
+                <p> 
+                    Integer interdum sed magna sit amet ultricies. Cras bibendum tellus elit, sed dapibus velit rhoncus
+                    vitae. Donec a tellus nunc. Phasellus vel risus nisi. Cras aliquam odio vel sollicitudin lacinia.
+                    Maecenas sed enim et dolor tempus aliquam. Orci varius natoque penatibus et magnis dis parturient
+                    montes, nascetur ridiculus mus.
+                </p>
+                <button>View Project</button>
             </div>
 
-            <div class="project">
-                <div class="projectimg">
-                    <img src="images/logo_purple.png" alt="Circle Logo">
-                </div>
-                <div class="description">
-                    <h4>Project 2</h4>
-                    <p>This will be a short summary of project 2</p>
-                    <button>View Project</button>
-                </div>
+            <div class="projectimg">
+                <img src="images/army.png" alt="ARMY Logo">
+            </div>
+            <div class="description2">
+                <h4>Project 2</h4>
+                <p>This will be a short summary of project 2</p>
+                <button>View Project</button>
             </div>
 
-            <div class="project">
-                <div class="projectimg">
-                    <img src="images/logo_purple.png" alt="Circle Logo">
-                </div>
-                <div class="description">
-                    <h4>Project 3</h4>
-                    <p>This will be a short summary of project 3</p>
-                    <button>View Project</button>
-                </div>
+            <div class="projectimg">
+                <img src="images/4oclock.jpg" alt="4 AM">
+            </div>
+            <div class="description3">
+                <h4>Project 3</h4>
+                <p>This will be a short summary of project 3</p>
+                <button>View Project</button>
             </div>
         </div>
 
